<resources>
    <string name="app_name">DiceRoller9000</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_the_type_of_dice">Select the type of dice:</string>
    <string name="modifier">Modifier:</string>
    <string name="roll">Roll</string>
    <string-array name="dice_types">
        <item>d2</item>
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
        <item>d100</item>
    </string-array>

    <string-array name="number_of_dice">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="result_format">You rolled a %d on a d%d</string>
    <string name="gif_description" />
    <string name="dice_prompt" />
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="number_of_dice_prompt" />
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="clear">CLEAR</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>

</resources>