<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wooddeckgreen"
        android:contentDescription="@string/gif_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <Spinner
            android:id="@+id/dice_spinner"
            style="@style/SpinnerBold"
            android:layout_width="390dp"
            android:layout_height="64dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="53dp"
            android:backgroundTint="#000000"
            android:entries="@array/dice_types"
            android:prompt="@string/dice_prompt"
            android:spinnerMode="dropdown"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/number_of_dice_spinner"
            style="@style/SpinnerBold"
            android:layout_width="390dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="11dp"
            android:entries="@array/number_of_dice"
            android:prompt="@string/number_of_dice_prompt"
            app:layout_constraintBottom_toTopOf="@+id/dice_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="202dp"
            android:layout_height="212dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="105dp"
            android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/result_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <ImageButton
                android:id="@+id/roll_button"
                android:layout_width="124dp"
                android:layout_height="121dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="41dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/d20black2"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


            <ImageView
                android:id="@+id/buttonCircle"
                android:layout_width="257dp"
                android:layout_height="253dp"
                android:contentDescription="@string/todo2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487"
                app:srcCompat="@drawable/gifcircle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="371dp"
            android:layout_height="115dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="52dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="335dp"
            android:layout_height="147dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_spinner">

            <TextView
                android:id="@+id/modifier_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="47dp"
                android:text="@string/modifier"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/modifier_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/modifier_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="66dp"
                android:layout_marginBottom="47dp"
                android:backgroundTint="#000000"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/clearButton"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/result_text"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/result_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrowright"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo5" />

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/result_text"
            app:layout_constraintEnd_toStartOf="@+id/rightButton"
            app:srcCompat="@drawable/arrowleft"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo4" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
